Bug 403145 - "Move to desktop" submenu shows "%2(i18n_argument_missing)" entries under Wayland
Summary: "Move to desktop" submenu shows "%2(i18n_argument_missing)" entries under Way...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-12 16:58 UTC by Patrick Silva
Modified: 2019-01-16 10:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (167.63 KB, image/png)
2019-01-12 16:58 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-01-12 16:58:04 UTC
Created attachment 117422 [details]
screenshot

SUMMARY
I'm testing virtual desktop supoprt under Wayland on neon dev unstable.

STEPS TO REPRODUCE
1. open some app under Wayland
2. right click its entry in the task manager
3. hover over "Move to desktop" submenu

OBSERVED RESULT
desktop names appear as "%2(i18n_argument_missing)". See the screenshot.

EXPECTED RESULT
correct desktop names are listed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
I can't reproduce under X11.
Comment 1 Eike Hein 2019-01-12 17:17:45 UTC
Problem may be server-side.

Relevant code is in libtaskmanager/virtualdesktopinfo.cpp:329, `VirtualDesktopInfo::WaylandPrivate::desktopNames()`.

From what I can tell, the ids stored are correct and the `KWayland::Client::PlasmaVirtualDesktop` instances from the interface look good, except `PlasmaVirtualDesktop::name()` returns nothing. So the applet gets nothing in the end.

Adding Marco and David who did the backend work.
Comment 2 Marco Martin 2019-01-16 10:30:47 UTC
Git commit f95a9618a71ccdb6e8cfb72d4b8b1962d6537dbb by Marco Martin.
Committed on 16/01/2019 at 10:28.
Pushed by mart into branch 'master'.

take the name of the VirtualDesktop instance

the name of the PlasmaVirtualDesktopInterface must be taken from
the VirtualDesktop instance, not from itself

M  +1    -1    virtualdesktops.cpp

https://commits.kde.org/kwin/f95a9618a71ccdb6e8cfb72d4b8b1962d6537dbb