take the name of the VirtualDesktop instance

the name of the PlasmaVirtualDesktopInterface must be taken from
the VirtualDesktop instance, not from itself

BUG:403145